# simple-bdd

./: CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/workflows/: build and release.yml  test build.yml
simple_bdd/: __init__.py  bdd.py  bddContext.py  scenario.py
tests/: bdd_generic_steps.py  bdd_gherkin_actions_test.py  bdd_gherkin_context_test.py  bdd_gherkin_failure_test.py  bdd_scenario_specs_test.py  bdd_scenario_steps.py  scenarios_specs_test.py  scenarios_steps.py  simple_specs_test.py  simple_steps.py
